--- a/styles.css
+++ b/styles.css
@@ -109,7 +109,7 @@ body {
   height: 100%;
   max-height: 100%;
   width: 100%;
-  background-color: #5000ff;
+  background-color: #000000;
 }
 
 /* Locomotive Scroll Setup */
